--- a/beta_security/src/main/resources/application.properties
+++ b/beta_security/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.name=alien
 spring.datasource.url=jdbc:mysql://localhost:3306/journal_db
 #spring.datasource.url=jdbc:mysql://localhost:3306/db_test_1 ?????? ??
 spring.datasource.username=root
-spring.datasource.password=12345678iligis
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
