--- a/beta_security/src/main/resources/application.properties
+++ b/beta_security/src/main/resources/application.properties
@@ -14,7 +14,7 @@ management.endpoints.web.exposure.include=health,info,prometheus
 ## ????????? ??????????? ? PostgreSQL
 #spring.datasource.url=jdbc:postgresql://localhost:5432/db_test
 #spring.datasource.username=postgres
-#spring.datasource.password=12345678iligis
+#spring.datasource.password=
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #
 ## ????????? JPA
